Sonar build tweaks